fix: dark mode icon color

--- a/css/light.css
+++ b/css/light.css
@@ -34,4 +34,5 @@
 
 #theme-toggle-button {
     background-image: url(/media/icons/dark-mode.svg);
+    filter: invert(11%) sepia(0%) saturate(2503%) hue-rotate(166deg) brightness(99%) contrast(47%);
 }
